--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<!-- your webpage info goes here -->
+<!-- webpage info -->
 
     <title>PathsOnMap in Corfu</title>
 	
@@ -10,7 +10,7 @@
 	<meta name="description" content=" The pathsonmap is an android application. It tries through gamification to motivate users to upload paths during walk." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="shortcut icon" href="favicon.ico">
-<!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->	
+
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	
 </head>
